# static-literary-clock

./: .gitmodules  LICENSE  README.md  csvToJson.py  pyproject.toml  server.py
